# ticker

./: LICENSE  README.md  ticker.cabal
app/: Main.hs
doc/: ticker.1.ronn
src/: Lib.hs
src/Lib/: Constants.hs  Reporter.hs  Types.hs
test/: LibSpec.hs
