name:                ticker
version:             0.1.0.0
homepage:            https://github.com/binarysunrise-io/ticker
license:             BSD3
license-file:        LICENSE
author:              Jesse Kempf
maintainer:          jesse.kempf@binarysunrise.io
copyright:           2018 Binary Sunrise, Inc.
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lib.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , time
                     , text

executable ticker
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , optparse-applicative
                     , ticker

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       LibSpec
  main-is:             Spec.hs
  build-depends:       base
                     , ticker
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/binarysunrise-io/ticker
